# minisysex

./: CMakeLists.txt  LICENSE
cmake/: amiga-gcc-toolchain.cmake  version.cmake
include/: log.h  midi.h  midicamd.h  midiserial.h
src/: log.c  midicamd.c  midiserial.c  minisysex.c  version.c.in
